Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132124

stream 1 finished with error: ""

XMLWordPrintable

    • Linux/X11
    • 2c71fdf04 (dev), 0a4ff045f (6.9)

       

      stream 1 error: "" 
      stream 1 finished with error: "" 
      

      I've been periodically seeing this for the past 1-2 weeks or so with the latest dev branch.

      QNetworkReply::error() returns QNetworkReply::NoError
      QNetworkRequest::HttpStatusCodeAttribute is not set

      The QNetworkReply contains no data.

      I'll try to add more details.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            manordheim Mårten Nordheim
            jonaski Jonas Kvinge
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes